--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     </head>
 
         <body>
-            <h1>Welcome to Yeet Squad</h1>
+            <h1>Welcome to Yeet Squad!</h1>
             <h2>We are happy to have you!</h2><br>
             <form class="contact-form" action="About.html" method="post">
                 <button type="About" name="About">About</button>
