--- a/About.html
+++ b/About.html
@@ -1,17 +1,28 @@
-<!DOCTYPE html>
-<html>
-
-    <head>
-        <title>YeetSquad</title>
-        <link rel="stylesheet" type="text/css" href="styles.css"/>
-    </head>
-    <body>
-        <h1>Welcome to Yeet Squad</h1>
-        <h2>We are happy to have you!</h2><br>
-
-<p>Hello we are YeetSquad! Welcome to the official website i hope u enjoy it! it took me a long time to make it!</p>
-
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <title>
+      YeetSquad
+    </title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <h1>
+      Welcome to Yeet Squad
+    </h1>
+    <h2>
+      We are happy to have you!
+    </h2>
+    <p>
+      <br />
+    </p>
+    <p>
+      Hello we are YeetSquad! Welcome to the official website i
+      hope u enjoy it! it took me a long time to make it!
+    </p>
+  </body>
+</html>
 
 
 
