--- a/Tryout-form.html
+++ b/Tryout-form.html
@@ -1,65 +1,80 @@
-<!DOCTYPE html>
-<html>
-
-    <head>
-        <title>YeetSquad</title>
-        <link rel="stylesheet" type="text/css" href="Tryout-form.css"/>
-
-
-
-            </form>
-    </head>
-
-        <body>
-            <form class="contact-form" action="About.html" method="post">
-                <button type="About" name="About">About</button>
-            </form>
-            <form class="contact-form" action="index.html" method="post">
-                <button type="Home" name="Home">Home</button>
-            </form>
-            
-            <head><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"></head>
-<br />
-<div class="inner contact">
-                <!-- Form Area -->
-                <div class="contact-form">
-                    <!-- Form -->
-                    <form id="contact-us" method="post" action="#">
-                        <!-- Left Inputs -->
-                        <div class="col-xs-6 wow animated slideInLeft" data-wow-delay=".5s">
-                            <!-- Name -->
-                            <input type="text" name="name" id="name" required="required" class="form" placeholder="Name" /><br>
-                            <!-- Email -->
-                            <input type="email" name="mail" id="mail" required="required" class="form" placeholder="Email" /><br>
-                            <!-- Subject -->
-                            <input type="text" name="subject" id="subject" required="required" class="form" placeholder="Subject" /><br>
-                        </div><!-- End Left Inputs -->
-                        <!-- Right Inputs -->
-                        <div class="col-xs-6 wow animated slideInRight" data-wow-delay=".5s">
-                            <!-- Message -->
-                            <textarea name="message" id="message" class="form textarea"  placeholder="Message"></textarea>
-                        </div><!-- End Right Inputs -->
-                        <!-- Bottom Submit -->
-                        <div class="relative fullwidth col-xs-12">
-                            <!-- Send Button -->
-                            <button type="submit" id="submit" name="submit" class="form-btn semibold">Send Message</button>
-                        </div><!-- End Bottom Submit -->
-                        <!-- Clear -->
-                        <div class="clear"></div>
-                    </form>
-
-                    <!-- Your Mail Message -->
-                    <div class="mail-message-area">
-                        <!-- Message -->
-                        <div class="alert gray-bg mail-message not-visible-message">
-                            <strong>Thank You !</strong> Your email has been delivered.
-                        </div>
-                    </div>
-
-                </div><!-- End Contact Form Area -->
-            </div><!-- End Inner -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-<form action="?" method="POST">
-      <div class="g-recaptcha" data-sitekey="6LeTjVsUAAAAAD-MwhJTJJS372K6Hbutd4Ymesgs"></div>
-      <br/>
-      <input type="submit" value="Submit">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <title>
+      YeetSquad
+    </title>
+    <link rel="stylesheet" type="text/css" href=
+    "Tryout-form.css" />
+    <link rel="stylesheet" href=
+    "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
+    type="text/css" />
+  </head>
+  <body>
+    <form class="contact-form" action="About.html" method="post">
+      <button type="about" name="About">About</button>
+    </form>
+    <form class="contact-form" action="index.html" method="post">
+      <button type="home" name="Home">Home</button>
+    </form>
+    <p>
+      <br />
+    </p>
+    <div class="inner contact">
+      <!-- Form Area -->
+      <div class="contact-form">
+        <!-- Form -->
+        <form id="contact-us" method="post" action="#" name=
+        "contact-us">
+          <!-- Left Inputs -->
+          <div class="col-xs-6 wow animated slideInLeft"
+          data-wow-delay=".5s">
+            <!-- Name -->
+            <input type="text" name="name" id="name" required=
+            "required" class="form" placeholder="Name" /><br />
+            <!-- Email -->
+             <input type="email" name="mail" id="mail" required=
+            "required" class="form" placeholder="Email" /><br />
+            <!-- Subject -->
+             <input type="text" name="subject" id="subject"
+            required="required" class="form" placeholder=
+            "Subject" /><br />
+          </div><!-- End Left Inputs -->
+          <!-- Right Inputs -->
+          <div class="col-xs-6 wow animated slideInRight"
+          data-wow-delay=".5s">
+            <!-- Message -->
+            <textarea name="message" id="message" class=
+            "form textarea" placeholder="Message">
+</textarea>
+          </div><!-- End Right Inputs -->
+          <!-- Bottom Submit -->
+          <div class="relative fullwidth col-xs-12">
+            <!-- Send Button -->
+            <button type="submit" id="submit" name="submit" class=
+            "form-btn semibold">Send Message</button>
+          </div><!-- End Bottom Submit -->
+          <!-- Clear -->
+          <div class="clear"></div>
+        </form><!-- Your Mail Message -->
+        <div class="mail-message-area">
+          <!-- Message -->
+          <div class=
+          "alert gray-bg mail-message not-visible-message">
+            <strong>Thank You !</strong> Your email has been
+            delivered.
+          </div>
+        </div>
+      </div><!-- End Contact Form Area -->
+    </div><!-- End Inner -->
+    <script src="https://www.google.com/recaptcha/api.js" async=""
+    defer="defer" type="text/javascript">
+</script>
+    <form action="?" method="post">
+      <div class="g-recaptcha" data-sitekey=
+      "6LeTjVsUAAAAAD-MwhJTJJS372K6Hbutd4Ymesgs"></div><br />
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
+</html>
