--- a/index.html
+++ b/index.html
@@ -1,49 +1,38 @@
-<!DOCTYPE html>
-<html>
-
-    <head>
-        <title>YeetSquad</title>
-        <link rel="stylesheet" type="text/css" href="styles.css"/>
-
-
-
-            </form>
-    </head>
-
-        <body>
-            <h1>Welcome to Yeet Squad!</h1>
-            <h2>We are happy to have you!</h2><br>
-            <form class="contact-form" action="About.html" method="post">
-                <button type="About" name="About">About</button>
-            </form>
-            <form class="contact-form" action="Tryout-form.html" method="post">
-                <button type="tryout" name="tryout">Tryout signup</button>
-            </form>
-            <p>To Visit our old website click this link (click that link u know u want to)</p>
-
-            <a href="https://yeetsquad.dudaone.com/">Link</a><br><br><br>
-
-<main>
-
-
-
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <title>
+      YeetSquad
+    </title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <h1>
+      Welcome to Yeet Squad!
+    </h1>
+    <h2>
+      We are happy to have you!
+    </h2>
+    <p>
+      <br />
+    </p>
+    <form class="contact-form" action="About.html" method="post">
+      <button type="about" name="About">About</button>
     </form>
-
-
-
-
-
-
-
-
-
-
-            </main>
-
-
-
-
-    </body>
-
+    <form class="contact-form" action="Tryout-form.html" method=
+    "post">
+      <button type="tryout" name="tryout">Tryout signup</button>
+    </form>
+    <p>
+      To Visit our old website click this link (click that link u
+      know u want to)
+    </p>
+    <p>
+      <a href="https://yeetsquad.dudaone.com/">Link</a>
+    </p>
+    <p>
+      <br />
+    </p>
+  </body>
 </html>
